--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="image/favicon" href="images/favicon.ico" rel="shortcut icon">
     <link href="css/style.css" rel="stylesheet">
     <title>Cайт фронтенд-разработчика Куприяновой Оксаны</title>
 </head>
@@ -20,27 +21,27 @@
             <article class="article">
                 <div class="info">
                     <div class="titles"> 
-                    <h1 class="title">Куприянова Оксана</h1>
-                    <h2 class="subtitle">Личный сайт frontend - разработчика</h2>
-                </div>
+                        <h1 class="title">Куприянова Оксана</h1>
+                        <h2 class="subtitle">Личный сайт frontend - разработчика</h2>
+                    </div>
                     <div class="infoabout">
                         <div class="img-wrapper">
-                        <img class="img" src="images/my-photo.jpg" alt="На фотографии представлен портрет разработчика данной сраницы" width="300">
+                            <img class="img" src="images/my-photo.jpg" alt="На фотографии представлен портрет разработчика данной сраницы" width="300">
                         </div>
                         <div class="spisok">
-                        <p>
-                        <ul>
-                            <li>г. Нижний Новгород</li>
-                            <li>35 лет</li>
-                            <li>Дата рождения: 29.08.1987</li>
-                        </ul>
-                        </p>
+                            <p>
+                                <ul>
+                                    <li>г. Нижний Новгород</li>
+                                     <li>35 лет</li>
+                                    <li>Дата рождения: 29.08.1987</li>
+                                </ul>
+                            </p>
                         </div>
                         <div class="aboutme">
-                        <p class="purple"><strong>Привет, меня зовут Куприянова Оксана</strong></p>
-                        <p>Я начинающий <em>фронтенд-разработчик</em>. Занимаюсь пользовательской частью сайта и делаю так, чтобы для вас все было не только красиво? но и быстро, современно и лаконично</p>
-                        <p>В IT с 2010 года, начинала с рисования анимации и несложных приложений во flash. Далее самостоятельно обучилась профессии веб-дизайнер и работала в течение двух лет сначала в студии, затем на фрилансе.</p>
-                        <p>Я обожаю творчество, музыку и дизайн. Но хочу чтобы у всех нас были технологичные красивые и современные сайты.</p>
+                            <p class="purple"><strong>Привет, меня зовут Куприянова Оксана</strong></p>
+                            <p>Я начинающий <em>фронтенд-разработчик</em>. Занимаюсь пользовательской частью сайта и делаю так, чтобы для вас все было не только красиво? но и быстро, современно и лаконично</p>
+                            <p>В IT с 2010 года, начинала с рисования анимации и несложных приложений во flash. Далее самостоятельно обучилась профессии веб-дизайнер и работала в течение двух лет сначала в студии, затем на фрилансе.</p>
+                            <p>Я обожаю творчество, музыку и дизайн. Но хочу чтобы у всех нас были технологичные красивые и современные сайты.</p>
                         </div>
                     </div>    
                 </div>
@@ -55,13 +56,18 @@
                             <li>профессия "веб-дизайнер"</li>
                             <li>создание анимации и приложений в Adobe Flash (начальный уровень)</li>
                         </ul>
-                    <li>2022 &mdash; Онлайн-обучение "Профессия Frontend-разработчик" 280 часов</li>
-                </ul></p>
+                        <li>2022 &mdash; Онлайн-обучение "Профессия Frontend-разработчик" 280 часов</li>
+                    </ul>
+                </p>
             </article>
             <article class="article">
                 <h2 class="subtitle2" id="work">Опыт работы</h2>
-                <p><ul><li>2 года в роли веб-дизайнера в студии и на фрилансе</li>
-                <li>мои учебные проекты по фронтенд <a href="#" alt="посмотреть портфолио разработчика" class="mail">на GitHub</a></li></ul></p> 
+                <p>
+                    <ul>
+                        <li>2 года в роли веб-дизайнера в студии и на фрилансе</li>
+                        <li>мои учебные проекты по фронтенд <a href="#" alt="посмотреть портфолио разработчика" class="mail">на GitHub</a></li>
+                    </ul>
+                </p> 
             </article>
             <article class="article">
                 <h2 class="subtitle2">Мои навыки</h2>
