--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p>
                     <ul>
                         <li>2 года в роли веб-дизайнера в студии и на фрилансе</li>
-                        <li>мои учебные проекты по фронтенд <a href="#" alt="посмотреть портфолио разработчика" class="mail">на GitHub</a></li>
+                        <li>мои учебные проекты по фронтенд <a href="https://github.com/kuprianovaoksana" alt="посмотреть портфолио разработчика" class="mail">на GitHub</a></li>
                     </ul>
                 </p> 
             </article>
@@ -83,7 +83,7 @@
         </main>
         <footer>
             <div id="contacts" class="footer">
-                <p><a href="#"><img src="images/icons8-github-64.png" alt="перейти на github"></a></p>
+                <p><a href="https://github.com/kuprianovaoksana"><img src="images/icons8-github-64.png" alt="перейти на github"></a></p>
                 <p><a href="mailto:oksana.kuprianova@gmail.com"><img src="images/icons8.png" alt="mailto"></a></p>
                 <p class="mail">oksana.kuprianova@gmail.com</p>
             </div>
