--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="aboutme">
                             <p class="purple"><strong>Привет, меня зовут Куприянова Оксана</strong></p>
-                            <p>Я начинающий <em>фронтенд-разработчик</em>. Занимаюсь пользовательской частью сайта и делаю так, чтобы для вас все было не только красиво? но и быстро, современно и лаконично</p>
+                            <p>Я начинающий <em>фронтенд-разработчик</em>. Занимаюсь пользовательской частью сайта и делаю так, чтобы для вас все было не только красиво, но и быстро, современно и лаконично</p>
                             <p>В IT с 2010 года, начинала с рисования анимации и несложных приложений во flash. Далее самостоятельно обучилась профессии веб-дизайнер и работала в течение двух лет сначала в студии, затем на фрилансе.</p>
                             <p>Я обожаю творчество, музыку и дизайн. Но хочу чтобы у всех нас были технологичные красивые и современные сайты.</p>
                         </div>
